--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -8,7 +8,7 @@ html(lang="ja")
     meta(name="apple-mobile-web-app-status-bar-style", content="black-translucent")
     title チャット
 
-    script(src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js")
+    script(src="https://cdn.jsdelivr.net/npm/vue")
     script(src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js")
   body
     #app
